Zonas y Departamentos Script Slides

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://metrocolombiafood.myvtex.com/files/global.css">
-    <link rel="stylesheet" href="../dist/cobertura-metro.css">
     <link rel="stylesheet" href="https://metrocolombiafood.myvtex.com/files/header-footer.css">
+    <link rel="stylesheet" href="../dist/cobertura-metro.css">
+    
 
     <title>Cobertura Metro</title>
 </head>
@@ -53,9 +54,36 @@
                                     <button class="zone tabLinksZone z-s"><i class="font-icn zona-sur"></i>Zona Sur</button>
                                 </div>
                                 <div class="coverage-search__container__nonfood__info">
-                                    <div id="z-norte" class="tabContentZone animated fadeIn fast">1</div>
-                                    <div id="z-centro" class="tabContentZone animated fadeIn fast">2</div>
-                                    <div id="z-sur" class="tabContentZone animated fadeIn fast">3</div>
+                                    <div id="z-norte" class="tabContentZone animated fadeIn fast">
+                                        <div class="grid-container">
+                                            <div class="sideBar">
+                                                <div class="sideBar__box"></div>
+                                            </div>
+                                            <div class="centerBox">
+                                                <ul></ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="z-centro" class="tabContentZone animated fadeIn fast">
+                                        <div class="grid-container">
+                                            <div class="sideBar">
+                                                <div class="sideBar__box"></div>
+                                            </div>
+                                            <div class="centerBox">
+                                                <ul></ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="z-sur" class="tabContentZone animated fadeIn fast">
+                                        <div class="grid-container">
+                                            <div class="sideBar">
+                                                <div class="sideBar__box"></div>
+                                            </div>
+                                            <div class="centerBox">
+                                                <ul></ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                     </div>
