Estilos Listas - Primer Departamento Funcion - Zoom Imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,10 @@
                                         </div>
                                     </div>
                                     <div class="centerBox">
-                                        <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-SanCayetano.jpg" alt="San Cayetano">
-                                        <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-Alqueria.jpg" alt="Alqueria">
+                                        <div class="centerBox__hideBox">
+                                            <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-SanCayetano.jpg" alt="San Cayetano" width='290' height='320'>
+                                            <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-Alqueria.jpg" alt="Alqueria">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -84,7 +86,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> 
                             </div>
                     </div>
                 </section>
