Mobile 80% - Comienzo Script Acordion

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                                         </div>
                                     </div>
                                     <div class="centerBox">
-                                        <div class="centerBox__hideBox">
+                                        <div id="boxGeneral" class="centerBox__hideBox">
                                             <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-SanCayetano.jpg" alt="San Cayetano" width='290' height='320'>
                                             <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-Alqueria.jpg" alt="Alqueria">
                                         </div>
