Ajuste Mobile Ciudades y Icono Cerrar Imagen Zoom

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
                                     </div>
                                     <div class="centerBox">
                                         <div id="boxGeneral" class="centerBox__hideBox">
+                                            <span class="close__icon">x</span>
                                             <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-SanCayetano.jpg" alt="San Cayetano" width='290' height='320'>
                                             <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-Alqueria.jpg" alt="Alqueria">
                                         </div>
