Cambio hash url categorias boton

--- a/server.html
+++ b/server.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Server
-    <script src="./src/cobertura-metro.json"></script>
+    <script src="./dist/cobertura-metro.js"></script>
 </body>
 </html>
