--- a/src/index.html
+++ b/src/index.html
@@ -38,14 +38,22 @@
                                     <div class="sideBar">
                                         <div class="sideBar__box">
                                             <button class="tabLinksImg b-01 active">Bogotá - San Cayetano</button>
-                                            <button class="tabLinksImg b-02">Bogotá - Alqueria</button>
+                                            <button class="tabLinksImg b-02">Bogotá - Alquería</button>
+                                            <button class="tabLinksImg b-03">Bogotá - Autopista Sur</button>
+                                            <button class="tabLinksImg b-04">Bogotá - Banderas</button>
+                                            <button class="tabLinksImg b-05">Bogotá - Fontibon</button>
+                                            <button class="tabLinksImg b-06">Bogotá - Tintalito</button>
                                         </div>
                                     </div>
                                     <div class="centerBox">
                                         <div id="boxGeneral" class="centerBox__hideBox">
                                             <span class="close__icon">x</span>
-                                            <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-SanCayetano.jpg" alt="San Cayetano" width='290' height='320'>
-                                            <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/MapaDeCobertura-Bogota-Alqueria.jpg" alt="Alqueria">
+                                            <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura San Cayetano.jpg" alt="San Cayetano" width='290' height='320'>
+                                            <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Alquería.jpg" alt="Alquería">
+                                            <img id="b-img-03" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura AutoSur.jpg" alt="Autopista Sur">
+                                            <img id="b-img-04" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Banderas.jpg" alt="Banderas">
+                                            <img id="b-img-05" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Fontibon.jpg" alt="Fontibon">
+                                            <img id="b-img-06" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Tintalito.jpg" alt="Tintalito">
                                         </div>
                                     </div>
                                 </div>
