Nuevas Tiendas y Cobertura Ajuste Estilos Mobile

--- a/src/index-vtex.html
+++ b/src/index-vtex.html
@@ -72,12 +72,12 @@
                                 <div class="centerBox">
                                     <div id="boxGeneral" class="centerBox__hideBox">
                                         <span class="close__icon">x</span>
-                                        <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura San Cayetano.jpg" alt="San Cayetano" width='290' height='320'/>
-                                        <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Alquería.jpg" alt="Alquería"/>
-                                        <img id="b-img-03" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura AutoSur.jpg" alt="Autopista Sur"/>
-                                        <img id="b-img-04" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Banderas.jpg" alt="Banderas"/>
-                                        <img id="b-img-05" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Fontibon.jpg" alt="Fontibon"/>
-                                        <img id="b-img-06" class="tabContentImg animated fadeIn slow" src="../images/New/MapaDeCobertura-Bogota_Cobertura Tintalito.jpg" alt="Tintalito"/>
+                                        <img id="b-img-01" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura San Cayetano.jpg" alt="San Cayetano" width='290' height='320'/>
+                                        <img id="b-img-02" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura Alquería.jpg" alt="Alquería"/>
+                                        <img id="b-img-03" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura AutoSur.jpg" alt="Autopista Sur"/>
+                                        <img id="b-img-04" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura Banderas.jpg" alt="Banderas"/>
+                                        <img id="b-img-05" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura Fontibon.jpg" alt="Fontibon"/>
+                                        <img id="b-img-06" class="tabContentImg animated fadeIn slow" src="/arquivos/MapaDeCobertura-Bogota_Cobertura Tintalito.jpg" alt="Tintalito"/>
                                     </div>
                                 </div>
                             </div>
